22-03-13 투포인터, 다중포인터 예제

--- a/prac.html
+++ b/prac.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>연습</h1>
-    <script src="./areThereDuplicates.js"></script>
+    <script src="./isSubsequence.js"></script>
   </body>
 </html>
