--- a/prac.html
+++ b/prac.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>연습</h1>
-    <script src="./재귀/fibonacci.js"></script>
+    <script src="BinarySearch_Exercise.js"></script>
   </body>
 </html>
