--- a/prac.html
+++ b/prac.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>연습</h1>
-    <script src="./정렬/QuickSort.js"></script>
+    <script src="./SinglyLinkedList.js"></script>
   </body>
 </html>
